sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:5: error: not found: value tri
    tri = 1
    ^AlgCocktailSort2:9: error: not found: value tri
        tri = 0
        ^AlgCocktailSort2:15: error: not found: value tri
        tri = 0
        ^